--- a/code-etl/parse_housing_data.ipynb
+++ b/code-etl/parse_housing_data.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c2d27e49",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "mypath = os.path.join('zillow-data')\n",
+    "mypath = os.path.join('..', 'zillow-data')\n",
     "json_files = [os.path.join(mypath, f) for f in os.listdir(mypath) if os.path.isfile(os.path.join(mypath, f))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e1c6cc79",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "9       3200 winnett rd chevy chase md 20815  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "15682a6b",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "59c3ebea",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
        "[10 rows x 32 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,12 +993,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b3b8db27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sold_homes_df.to_csv(os.path.join('sale_price.csv'), index=False)"
+    "sold_homes_df.to_csv(os.path.join('..', 'csv_data', 'sale_price.csv'), index=False)"
    ]
   },
   {
