--- a/code-etl/assign_nearest_schools.ipynb
+++ b/code-etl/assign_nearest_schools.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
+    "import os\n",
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
@@ -238,7 +239,7 @@
    ],
    "source": [
     "# Load the housing sale prices data.\n",
-    "houses_df = pd.read_csv('sale_price.csv')\n",
+    "houses_df = pd.read_csv(os.path.join('..', 'csv_data', 'sale_price.csv'))\n",
     "\n",
     "# Add columns for assigned elementary, middle and high schools.\n",
     "houses_df['elem'] = np.nan\n",
@@ -310,7 +311,7 @@
    "outputs": [],
    "source": [
     "# Load the school ratings data.\n",
-    "schools_df = pd.read_csv('mcps_school_ratings.csv')\n",
+    "schools_df = pd.read_csv(os.path.join('..', 'csv_data', 'mcps_school_ratings.csv'))\n",
     "\n",
     "# Get a list of \"cleaned\" elementary school names.\n",
     "elem_schools = get_schools(schools_df.loc[schools_df['Type'] == 'E'])\n",
@@ -26963,7 +26964,7 @@
    "outputs": [],
    "source": [
     "############################ Must stay commented out in order not to overwrite. ##############\n",
-    "#houses_df.to_csv('house_info_school_assignments.csv', index=False)\n",
+    "#houses_df.to_csv(os.path.join('..', 'csv_data', 'house_info_school_assignments.csv', index=False))\n",
     "##############################################################################################"
    ]
   },
@@ -26984,7 +26985,7 @@
    ],
    "source": [
     "# Load data again and remove all addresses with at least one unassigned school. Sava again.\n",
-    "houses_sch_assigned_df = pd.read_csv('house_info_school_assignments.csv')\n",
+    "houses_sch_assigned_df = pd.read_csv(os.path.join('..', 'csv_data', 'house_info_school_assignments.csv'))\n",
     "\n",
     "print(f'There are {len(houses_sch_assigned_df)} records to begin with.')\n",
     "\n",
@@ -26998,7 +26999,7 @@
     "\n",
     "print(f'There are {len(houses_sch_assigned_df)} records after dropping houses with at least one unassigned school.')\n",
     "\n",
-    "houses_sch_assigned_df.to_csv('house_info_school_assignments_dropna.csv', index=False)"
+    "houses_sch_assigned_df.to_csv(os.path.join('..', 'csv_data', 'house_info_school_assignments_dropna.csv', index=False))"
    ]
   },
   {
