--- a/code-etl/transform_data.ipynb
+++ b/code-etl/transform_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "f2690f8d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "1b89f53d",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "[13955 rows x 36 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "e0c7b962",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
        "[13955 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "2aa7ed5d",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
        "[9679 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "deafba7a",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
        "[9679 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "19a756ed",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1538,7 @@
        "[9672 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "271a9504",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1806,7 @@
        "[9672 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "bbbe1153",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1880,7 @@
        "      <th>elem</th>\n",
        "      <th>middle</th>\n",
        "      <th>high</th>\n",
-       "      <th>Year built</th>\n",
+       "      <th>AgeYears</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2081,23 +2081,23 @@
        "13951    2160.000000    20878          summit hall elementary   \n",
        "13954    2000.000000    20878              diamond elementary   \n",
        "\n",
-       "                      middle                    high  Year built  \n",
-       "0      herbert hoover middle  winston churchill high        42.0  \n",
-       "1              tilden middle     walter johnson high       106.0  \n",
-       "2              tilden middle       walt whitman high        65.0  \n",
-       "3          cabin john middle  winston churchill high        56.0  \n",
-       "5      thomas w. pyle middle    albert einstein high       153.0  \n",
-       "...                      ...                     ...         ...  \n",
-       "13948    hallie wells middle         clarksburg high        34.0  \n",
-       "13949    gaithersburg middle       gaithersburg high        42.0  \n",
-       "13950    gaithersburg middle       gaithersburg high        37.0  \n",
-       "13951  lakelands park middle       gaithersburg high        35.0  \n",
-       "13954  lakelands park middle     quince orchard high        38.0  \n",
+       "                      middle                    high  AgeYears  \n",
+       "0      herbert hoover middle  winston churchill high      42.0  \n",
+       "1              tilden middle     walter johnson high     106.0  \n",
+       "2              tilden middle       walt whitman high      65.0  \n",
+       "3          cabin john middle  winston churchill high      56.0  \n",
+       "5      thomas w. pyle middle    albert einstein high     153.0  \n",
+       "...                      ...                     ...       ...  \n",
+       "13948    hallie wells middle         clarksburg high      34.0  \n",
+       "13949    gaithersburg middle       gaithersburg high      42.0  \n",
+       "13950    gaithersburg middle       gaithersburg high      37.0  \n",
+       "13951  lakelands park middle       gaithersburg high      35.0  \n",
+       "13954  lakelands park middle     quince orchard high      38.0  \n",
        "\n",
        "[9672 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2106,13 +2106,14 @@
     "# Convert year built.\n",
     "from datetime import date\n",
     "\n",
-    "houses_df['Year built'] = houses_df['Year built'].apply(lambda x: date.today().year-x)\n",
+    "houses_df['AgeYears'] = houses_df['Year built'].apply(lambda x: date.today().year-x)\n",
+    "houses_df = houses_df.drop(columns=['Year built'])\n",
     "houses_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "ce467b85",
    "metadata": {},
    "outputs": [],
